# steam-mcp

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  deploy.md  docker-compose.yml  pyproject.toml  test.py
docs/plans/: 2026-03-27-cross-platform-db-schema-migration.md  2026-03-27-epic-gog-data-modules.md  2026-03-27-nintendo-data-module.md  2026-03-27-psn-data-module.md  2026-03-27-tool-changes.md
docs/superpowers/plans/: 2026-04-03-gog-lgogdownloader-redesign.md
docs/superpowers/specs/: 2026-04-03-gog-lgogdownloader-redesign.md  2026-04-05-platform-enrichment-design.md
gamelib_mcp/: setup_platform.py
gamelib_mcp/data/: db.py  igdb.py  metacritic.py  psn.py  steam_store.py
gamelib_mcp/tools/: admin.py  discover.py  library.py  platforms.py  stats.py
steam_mcp/: main.py  migrate.py  utils.py
steam_mcp/data/: backloggd.py  db.py  enrich_bg.py  epic.py  gog.py  hltb.py  nintendo.py  opencritic.py  protondb.py  psn.py  steam_reviews.py  steam_store.py  steam_xml.py  steamspy.py
steam_mcp/tools/: admin.py  detail.py  discover.py  library.py  ratings.py  stats.py
tests/: test_db_migration.py  test_epic.py  test_gog.py
