[project]
name = "steam-mcp"
version = "0.1.0"
description = "Steam Library MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "howlongtobeatpy>=1.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steam_mcp"]
